Fix issue with pinch on iPhones

--- a/atoms/default/client/css/main.scss
+++ b/atoms/default/client/css/main.scss
@@ -15,14 +15,9 @@
 @import "footer";
 
 
-html, body {
-   max-width: 100%;
-}
-
-body {
-    width: 100%;
-    max-width: 100%;
-    display: block;
+html {
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 figure.element {
